# depthmapX

./: .travis.yml  CMakeLists.txt  CMakeOpenMP.txt  depthmapX.pro
.github/workflows/: main.yml
GuiApp/: GuiApp.pro  coreapplication.h
GuiUnitTest/: GuiUnitTest.pro
ci/: build.sh
cliTest/: CMakeLists.txt  cliTest.pro  testimportparser.cpp  testmaxdepthparser.cpp  testshortestpathparser.cpp
depthmapX/: AllFewestLineMapDlg.cpp  AllFewestLineMapDlg.h  CMakeLists.txt  GraphDoc.cpp  GraphDoc.h  attributeIndex.cpp  attributeIndex.h  compatibilitydefines.h  coreapplication.cpp  coreapplication.h  depthmapView.cpp  depthmapX.pro  glview.cpp  indexWidget.cpp  indexWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowfactory.cpp  mainwindowfactory.h  mapIndex.cpp  mapIndex.h  mdichild.cpp  mdichild.h  renderthread.cpp  settings.h  settingsimpl.h  treeWindow.cpp  treeWindow.h  version.h
depthmapX/UI/: AllFewestLineMapDlg.ui
depthmapX/dialogs/: CMakeLists.txt  ColourScaleDlg.cpp  ColumnPropertiesDlg.cpp  MakeLayerDlg.h
depthmapX/views/: CMakeLists.txt  mapview.cpp  mapview.h  viewhelpers.cpp  viewhelpers.h
depthmapX/views/3dview/: 3dview.cpp  3dview.h
depthmapX/views/depthmapview/: depthmapview.cpp  depthmapview.h
depthmapX/views/glview/: gldynamicline.cpp  gldynamicline.h  gldynamicrect.cpp  gldynamicrect.h  gllines.cpp  gllines.h  gllinesuniform.cpp  gllinesuniform.h  glpointmap.cpp  glpointmap.h  glpolygons.cpp  glpolygons.h  glrastertexture.cpp  (+13 more)
depthmapXTest/: CMakeLists.txt
depthmapXcli/: CMakeLists.txt  depthmapXcli.pro  findgraphsparser.cpp  findgraphsparser.h  importparser.cpp  importparser.h  isovistzoneparser.cpp  isovistzoneparser.h  maxdepthparser.cpp  maxdepthparser.h  modeparserregistry.cpp  runmethods.cpp  runmethods.h  shortestpathparser.cpp  shortestpathparser.h
docs/: building.md  index.md
genlib/: bsptree.cpp  bsptree.h  comm.h  containerutils.h  genlib.pro  linreg.h  p2dpoly.cpp  p2dpoly.h  pafmath.h  simplematrix.h  xmlparse.cpp
genlibTest/: CMakeLists.txt  genlibTest.pro  testp2dpoly.cpp
mgraph440/: mgraph440.pro  pixelbase.cpp
modules/vga/cliTest/: CMakeLists.txt  vgaparsertest.cpp
modules/vgaparallel/core/: CMakeLists.txt  CMakeOpenMP.txt  vgaangularopenmp.cpp  vgaangularopenmp.h  vgametricopenmp.cpp  vgametricopenmp.h  vgavisualglobalopenmp.cpp  vgavisualglobalopenmp.h  vgavisuallocaladjmatrix.cpp  vgavisuallocaladjmatrix.h  vgavisuallocalopenmp.cpp  vgavisuallocalopenmp.h
modules/vgaparallel/gui/: CMakeLists.txt  vgaparallelmainwindow.cpp  vgaparallelmainwindow.h  vgaparalleloptionsdlg.cpp  vgaparalleloptionsdlg.h
modules/vgaparallel/gui/UI/: vgaparalleloptionsdlg.ui
modules/vgapaths/core/: CMakeLists.txt  extractlinkdata.cpp  extractlinkdata.h  vgaangularshortestpath.cpp  vgaangularshortestpath.h  vgaisovistzone.cpp  vgaisovistzone.h  vgametricdepthlinkcost.cpp  vgametricdepthlinkcost.h  vgametricshortestpath.cpp  vgametricshortestpath.h  vgametricshortestpathtomany.cpp  vgametricshortestpathtomany.h  vgavisualshortestpath.cpp  vgavisualshortestpath.h
salaTest/: salaTest.pro  testpointmap.cpp  testshapegraphs.cpp  testshaperemove.cpp
salalib/: CMakeLists.txt  MapInfoData.h  alllinemap.cpp  alllinemap.h  attributes.cpp  attributes.h  attributetable.cpp  attributetable.h  attributetablehelpers.h  attributetableindex.cpp  attributetableindex.h  attributetableview.cpp  attributetableview.h  axialmap.cpp  axialmap.h  axialminimiser.cpp  axialminimiser.h  axialpolygons.cpp  axialpolygons.h  connector.cpp  connector.h  displayparams.h  entityparsing.cpp  entityparsing.h  fileproperties.h  geometrygenerators.cpp  geometrygenerators.h  gridproperties.cpp  iaxial.h  importtypedefs.h  importutils.cpp  isegment.h  isovist.cpp  isovist.h  layermanager.h  layermanagerimpl.cpp  layermanagerimpl.h  linkutils.cpp  linkutils.h  mapconvert.cpp  (+36 more)
salalib/agents/: agent.cpp  agent.h  agentengine.cpp  agentengine.h  agenthelpers.h  agentprogram.cpp  agentprogram.h  agentset.cpp
salalib/axialmodules/: axialintegration.cpp  axialintegration.h  axialstepdepth.cpp  axialstepdepth.h
salalib/parsers/: dxfp.cpp  dxfp.h  mapinfodata.cpp  mapinfodata.h  ntfp.cpp  ntfp.h  tigerp.cpp  tigerp.h
salalib/segmmodules/: CMakeLists.txt  segmangular.cpp  segmangular.h  segmmetric.cpp  segmmetric.h  segmmetricpd.cpp  segmmetricpd.h  segmmetricshortestpath.cpp  segmtopological.cpp  segmtopological.h  segmtopologicalpd.cpp  segmtopologicalpd.h  segmtopologicalshortestpath.cpp  segmtulip.cpp  segmtulip.h  segmtulipdepth.cpp  segmtulipdepth.h  segmtulipshortestpath.cpp
salalib/vgamodules/: CMakeLists.txt  extractlinkdata.cpp  extractlinkdata.h  vgaangular.cpp  vgaangular.h  vgaangulardepth.cpp  vgaangulardepth.h  vgaangularmaxdepth.cpp  vgaangularmaxdepth.h  vgaangularopenmp.cpp  vgaangularopenmp.h  vgaangularshortestpath.cpp  vgaangularshortestpath.h  vgaisovist.cpp  vgaisovist.h  vgaisovistzone.cpp  vgaisovistzone.h  vgametric.cpp  vgametric.h  vgametricdepth.cpp  vgametricdepth.h  vgametricdepthlinkcost.cpp  vgametricdepthlinkcost.h  vgametricmaxdepth.cpp  vgametricmaxdepth.h  vgametricopenmp.cpp  vgametricopenmp.h  vgametricshortestpath.cpp  vgametricshortestpath.h  vgametricshortestpathtomany.cpp  vgametricshortestpathtomany.h  vgamodules.pri  vgathroughvision.cpp  vgathroughvision.h  vgavisualbetweenness.cpp  vgavisualbetweenness.h  vgavisualglobal.cpp  vgavisualglobal.h  vgavisualglobaldepth.cpp  vgavisualglobaldepth.h  (+16 more)
tools/build-image/: Dockerfile
(+61 files in other folders)
